examples/invalid/inregular.ccs
X := a.b + c.d.Y[bla];
Y[foo] := out!foo | spawn.X;

X

